Fixed bug with "Built by YACS under RCOS at RPI" in footer not changing with dark mode

--- a/src/web/src/assets/dark.scss
+++ b/src/web/src/assets/dark.scss
@@ -38,7 +38,7 @@
   }
 
   #credits {
-    background: var(--dark-primary) !important;
+    color: var(--dark-text-primary) !important;
   }
 
   #footer {
